--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,12 +2,19 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/clothingmall?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
     username: root
-    password: qweasd123
+    password: 123456
     driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     show-sql: true
+    hibernate:
+      ddl-auto: update
     properties:
       hibernate:
         format_sql: true
+        dialect: org.hibernate.dialect.MySQL8Dialect
+  servlet:
+    multipart:
+      max-file-size: 10MB
+      max-request-size: 10MB
 server:
   port: 8181
