--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,12 +2,40 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/clothingmall?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
     username: root
-    password: qweasd123
+    password: 123456
     driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     show-sql: true
     properties:
       hibernate:
         format_sql: true
+  # 文件上传配置
+  servlet:
+    multipart:
+      max-file-size: 10MB
+      max-request-size: 10MB
+
 server:
   port: 8181
+
+# 百度AI配置
+baidu:
+  ai:
+    app-id: your_baidu_app_id
+    api-key: your_baidu_api_key
+    secret-key: your_baidu_secret_key
+
+# Milvus向量数据库配置
+milvus:
+  host: localhost
+  port: 19530
+  collection-name: clothing_knowledge
+
+# AI试衣模型配置
+ai:
+  try-on:
+    model-url: http://localhost:5000/ai-try-on
+
+# 文件上传路径
+upload:
+  path: d:/uploads/
